--- a/src/App.css
+++ b/src/App.css
@@ -42,6 +42,17 @@
     0% { height: 100vh; }
     20% { height: 100vh; }
     21% { height: 100vh;; }
+    93% { height: 100vh; }
+    100% { height: 0; }
+  }
+
+  .backWall{
+    animation: backWallUp 14s;
+  }
+  @keyframes backWallUp {
+    0% { height: 100vh; }
+    20% { height: 100vh; }
+    21% { height: 100vh;; }
     97% { height: 100vh; }
     100% { height: 0; }
   }
