--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
 @keyframes languageAnimation {
     0% { opacity: 0; }
     20% { opacity: 1; }
@@ -55,4 +61,11 @@
     21% { height: 100vh;; }
     97% { height: 100vh; }
     100% { height: 0; }
+  }
+  
+  .Isaac {
+    position: fixed;
+    top: 10%;
+    left: -400px;
+    white-space: nowrap;
   }
