--- a/src/App.css
+++ b/src/App.css
@@ -74,3 +74,28 @@
     right: -40px;
     white-space: nowrap;
   }
+  .myImage {
+    background-image: url("./assets/IMG-20230318-WA0007.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    box-shadow: inset 0 0 0 9px rgb(255 255 255 / 30%);
+    width: 300px;
+    height: 300px;
+    justify-self: center;
+    animation: profile-animate 8s ease-in-out infinite 1s;
+  }
+
+  @keyframes profile-animate {
+    0% {
+        border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
+    }
+
+    50% {
+        border-radius: 30% 60% 70% 40%/ 50% 60% 30% 60%;
+    }
+    
+    100% {
+        border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
+    }
+  }
